--- a/html/hizmetlerimiz.html
+++ b/html/hizmetlerimiz.html
@@ -70,6 +70,7 @@
                             Hizmetlerimiz
                         </a>
                     </li>
+
                     <li class="nav-item text-uppercase">
                         <a href="hizmet_bolgesi.html" class="nav-link kalk">
                             Hizmet Bölgesi
@@ -91,7 +92,7 @@
                                 2929</a>
 
 
-                            </span>
+                        </span>
 
                     </li>
 
@@ -101,24 +102,9 @@
         </div>
     </nav>
 
-    <div id="slider">
-
-        <a class="mySlides" href="#"><img src="../asset/7-244-01-1.png" /></a>
-        <a class="mySlides" href="#"><img
-                src="../asset/European-Satellite-Dish-Installation-in-Reading-Berkshire-1184x789-800x533.jpg" /></a>
-        <a class="mySlides" href="#"><img src="../asset/Merkezi-Uydu-TV-Sistemleri.png" /></a>
-        <a class="mySlides" href="#"><img src="../asset/melihk.png" /></a>
-        <a class="mySlides" href="#"><img src="../asset/aaa.png" alt=""></a>
-    </div>
 
 
-
-    <p id="hizmet" class="hakkımızda">7/24 Acil uydu servisini arayın. tüm tv platformlarının tamir ve servis
-        hizmetleriniz
-        vermekteyiz.</p>
-
-
-    <div class="container-fluid hizmet">
+    <div class="container-fluid hizmet melih">
 
         <div class="row">
             <div class="col-sm-2"></div>
@@ -166,47 +152,6 @@
         </div>
     </div>
 
-
-
-    <img class="foto" src="../asset/53763.jpg" alt="">
-    <img class="foto2" src="../asset/images.png" alt="">
-    <img class="foto1" src="../asset/fc_Digiturk_LOGO001.jpg" alt="">
-    <img class="foto4" src="../asset/indir (1).png" alt="">
-
-
-
-
-    <P class="hakkımızda ">
-
-
-
-
-        Emre Uydu Sistemleri olarak;
-
-        Uydu ayarı, Digiturk, Turksat, Tivibu, Dsmart kurulumu ve arızası, Tivibu kanal ayarları, anten kurulumu, hat
-        çekme, kablo çekme, uydu kanal listesi güncelleme, Türksat uydu frekansları, astra ve hotbird uydusu bulma, tv
-        ve kanal listesi düzenleme, kanal arama, çanak yönü bulma, çanak bulma, dayzek ve disqc ayarı yapma
-        hizmetlerimizi uzman ekiplerimiz ile hızlı ve güvenilir şekilde yapıyoruz.
-
-    </P>
-
-
-    <img class="montaj" src="../asset/uydu-canak-montaji-6.jpg" alt="">
-
-
-    <p class="hakkımızda">
-        Uzman ekiplerimzce en kısa sürede anten sabitleme, anten ayar, anten servisi hizmeti. Aynı zamanda dijital
-        televizyon ayarları, tv uydu
-        recevir update etme hizmetlerimiz de bulunmaktadır.
-
-    </p>
-
-    <img class="montaj" src="../asset/merkeziuydu.jpg" alt="">
-
-    <p  id="harita" class="hakkımızda">
-        Apartman gibi toplu yaşam alanlarında yüksek çözünürlüklü uydu tv yayınlarını her abonenin çanak anten kurmasına
-        gerek kalmadan tüm apartman sakinlerinin yararlanabilmesi için tek Merkezi Sistem kurulumunu. Onarım ve bakımı.
-    </p>
 
 
     <div class="call">
@@ -357,26 +302,5 @@
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-    <script>
-        var slideIndex = 0;
-        carousel();
-
-        function carousel() {
-            var i;
-            var x = document.getElementsByClassName("mySlides");
-            for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-            }
-            slideIndex++;
-            if (slideIndex > x.length) { slideIndex = 1 }
-            x[slideIndex - 1].style.display = "block";
-            setTimeout(carousel, 3000); // Change image every 3 seconds
-        }
-    </script>
-
 </body>
-
 </html>
