--- a/html/iletisim.html
+++ b/html/iletisim.html
@@ -61,7 +61,7 @@
                 <ul>
                     <li class="nav-item text-uppercase">
                         <a href="index.html" class="nav-link kalk">
-                            Ana Sayfa 
+                            Ana Sayfa
                         </a>
 
                     </li>
@@ -91,7 +91,7 @@
                                 2929</a>
 
 
-                            </span>
+                        </span>
 
                     </li>
 
@@ -101,115 +101,9 @@
         </div>
     </nav>
 
-    <div id="slider">
-
-        <a class="mySlides" href="#"><img src="../asset/7-244-01-1.png" /></a>
-        <a class="mySlides" href="#"><img
-                src="../asset/European-Satellite-Dish-Installation-in-Reading-Berkshire-1184x789-800x533.jpg" /></a>
-        <a class="mySlides" href="#"><img src="../asset/Merkezi-Uydu-TV-Sistemleri.png" /></a>
-        <a class="mySlides" href="#"><img src="../asset/melihk.png" /></a>
-        <a class="mySlides" href="#"><img src="../asset/aaa.png" alt=""></a>
-    </div>
 
 
-
-    <p id="hizmet" class="hakkımızda">7/24 Acil uydu servisini arayın. tüm tv platformlarının tamir ve servis
-        hizmetleriniz
-        vermekteyiz.</p>
-
-
-    <div class="container-fluid hizmet">
-
-        <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-4">
-                <p>Merkezi uydu santral montajı</p>
-                <p>Televizyon montajı hizmetleri</p>
-                <p>İstanbul Uydu ayar</p>
-                <p>İstanbul türksat çanak ayarı</p>
-                <p>Digitürk çanak ayarı antenci uydu servisi</p>
-                <p>Dsmart anten ayarı çanak servisi</p>
-                <p>İstanbul uydu anten ayarları</p>
-                <p>İstanbul Uydu servisi</p>
-                <p>Uydu kurulumu ile ilgili malzemeler</p>
-                <p>Uydu arıza talepleri</p>
-                <p>İstanbul Uydu montajı hizmetleri</p>
-                <p>Çanak anteni ayarlama</p>
-                <p>İstanbul Uydu kurulum ile ilgili işlemler</p>
-                <p>İstanbul Merkezi uydu sistemleri</p>
-                <p>Apartman uydu sistemleri</p>
-                <p>Ortak anten sistemleri</p>
-                <p>Bina uydu sistemleri</p>
-                <p>İstanbul antenci uydu anteni ayarı</p>
-            </div>
-            <div class="col-sm-4">
-                <p>Merkezi uydu santrali</p>
-                <p>İstanbul Çanak montajı hizmetlerimiz</p>
-                <p>İstanbul Enyakın uydu servisi</p>
-                <p>İstanbul Uydu tamircisi yapan firmalar</p>
-                <p>Çanak servisi telefonları</p>
-                <p>Çanak anten kurulum</p>
-                <p>Çanak anten değiştirme</p>
-                <p>İstanbul antenci uydu servisi</p>
-                <p>İstanbul Anten servisi</p>
-                <p>Uydu servisleri bakım hizmetleri</p>
-                <p>Uydu ustası uyducu elemanları</p>
-                <p>Anten ustası</p>
-                <p>Uydu teknik servisi</p>
-                <p>İstanbul Uyducu</p>
-                <p>İstanbul Anten tamircisi</p>
-                <p>Lnb arızası</p>
-                <p>Uydu arızası</p>
-                <p>İstanbul çanak anten ayarı</p>
-            </div>
-            <div class="col-sm-2"></div>
-        </div>
-    </div>
-
-
-
-    <img class="foto" src="../asset/53763.jpg" alt="">
-    <img class="foto2" src="../asset/images.png" alt="">
-    <img class="foto1" src="../asset/fc_Digiturk_LOGO001.jpg" alt="">
-    <img class="foto4" src="../asset/indir (1).png" alt="">
-
-
-
-
-    <P class="hakkımızda ">
-
-
-
-
-        Emre Uydu Sistemleri olarak;
-
-        Uydu ayarı, Digiturk, Turksat, Tivibu, Dsmart kurulumu ve arızası, Tivibu kanal ayarları, anten kurulumu, hat
-        çekme, kablo çekme, uydu kanal listesi güncelleme, Türksat uydu frekansları, astra ve hotbird uydusu bulma, tv
-        ve kanal listesi düzenleme, kanal arama, çanak yönü bulma, çanak bulma, dayzek ve disqc ayarı yapma
-        hizmetlerimizi uzman ekiplerimiz ile hızlı ve güvenilir şekilde yapıyoruz.
-
-    </P>
-
-
-    <img class="montaj" src="../asset/uydu-canak-montaji-6.jpg" alt="">
-
-
-    <p class="hakkımızda">
-        Uzman ekiplerimzce en kısa sürede anten sabitleme, anten ayar, anten servisi hizmeti. Aynı zamanda dijital
-        televizyon ayarları, tv uydu
-        recevir update etme hizmetlerimiz de bulunmaktadır.
-
-    </p>
-
-    <img class="montaj" src="../asset/merkeziuydu.jpg" alt="">
-
-    <p  id="harita" class="hakkımızda">
-        Apartman gibi toplu yaşam alanlarında yüksek çözünürlüklü uydu tv yayınlarını her abonenin çanak anten kurmasına
-        gerek kalmadan tüm apartman sakinlerinin yararlanabilmesi için tek Merkezi Sistem kurulumunu. Onarım ve bakımı.
-    </p>
-
-
-    <div class="call">
+    <div class="call iletisim2">
         <a class="telefon-ara-btn" href="tel:+905051162929"><i class="fa fa-phone" aria-hidden="true"></i> +90 (505) 116
             2929</a>
         <br>
@@ -354,28 +248,6 @@
         <!-- Copyright -->
     </footer>
     <!-- Footer -->
-
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-    <script>
-        var slideIndex = 0;
-        carousel();
-
-        function carousel() {
-            var i;
-            var x = document.getElementsByClassName("mySlides");
-            for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-            }
-            slideIndex++;
-            if (slideIndex > x.length) { slideIndex = 1 }
-            x[slideIndex - 1].style.display = "block";
-            setTimeout(carousel, 3000); // Change image every 3 seconds
-        }
-    </script>
 
 </body>
 
