--- a/html/hizmet_bolgesi.html
+++ b/html/hizmet_bolgesi.html
@@ -28,7 +28,7 @@
     <meta property="og:image:type" content="image/jpeg">
 
     <title>EMRE UYDU SİSTEMLERİ</title>
-
+    
     <link rel="stylesheet" href="../css/diletisim.css">
     <link rel="stylesheet" href="../css/dstyl.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -91,7 +91,7 @@
                                 2929</a>
 
 
-                            </span>
+                        </span>
 
                     </li>
 
@@ -101,115 +101,341 @@
         </div>
     </nav>
 
-    <div id="slider">
-
-        <a class="mySlides" href="#"><img src="../asset/7-244-01-1.png" /></a>
-        <a class="mySlides" href="#"><img
-                src="../asset/European-Satellite-Dish-Installation-in-Reading-Berkshire-1184x789-800x533.jpg" /></a>
-        <a class="mySlides" href="#"><img src="../asset/Merkezi-Uydu-TV-Sistemleri.png" /></a>
-        <a class="mySlides" href="#"><img src="../asset/melihk.png" /></a>
-        <a class="mySlides" href="#"><img src="../asset/aaa.png" alt=""></a>
-    </div>
 
 
 
-    <p id="hizmet" class="hakkımızda">7/24 Acil uydu servisini arayın. tüm tv platformlarının tamir ve servis
-        hizmetleriniz
-        vermekteyiz.</p>
 
+    <div id="sicerik">
+        <div class="cl">
 
-    <div class="container-fluid hizmet">
+            <strong>Ataşehir Bölgesi</strong>
 
-        <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-4">
-                <p>Merkezi uydu santral montajı</p>
-                <p>Televizyon montajı hizmetleri</p>
-                <p>İstanbul Uydu ayar</p>
-                <p>İstanbul türksat çanak ayarı</p>
-                <p>Digitürk çanak ayarı antenci uydu servisi</p>
-                <p>Dsmart anten ayarı çanak servisi</p>
-                <p>İstanbul uydu anten ayarları</p>
-                <p>İstanbul Uydu servisi</p>
-                <p>Uydu kurulumu ile ilgili malzemeler</p>
-                <p>Uydu arıza talepleri</p>
-                <p>İstanbul Uydu montajı hizmetleri</p>
-                <p>Çanak anteni ayarlama</p>
-                <p>İstanbul Uydu kurulum ile ilgili işlemler</p>
-                <p>İstanbul Merkezi uydu sistemleri</p>
-                <p>Apartman uydu sistemleri</p>
-                <p>Ortak anten sistemleri</p>
-                <p>Bina uydu sistemleri</p>
-                <p>İstanbul antenci uydu anteni ayarı</p>
+            <div>
+                &nbsp;</div>
+            <div>
+                • Aşık Veysel Mahallesi
             </div>
-            <div class="col-sm-4">
-                <p>Merkezi uydu santrali</p>
-                <p>İstanbul Çanak montajı hizmetlerimiz</p>
-                <p>İstanbul Enyakın uydu servisi</p>
-                <p>İstanbul Uydu tamircisi yapan firmalar</p>
-                <p>Çanak servisi telefonları</p>
-                <p>Çanak anten kurulum</p>
-                <p>Çanak anten değiştirme</p>
-                <p>İstanbul antenci uydu servisi</p>
-                <p>İstanbul Anten servisi</p>
-                <p>Uydu servisleri bakım hizmetleri</p>
-                <p>Uydu ustası uyducu elemanları</p>
-                <p>Anten ustası</p>
-                <p>Uydu teknik servisi</p>
-                <p>İstanbul Uyducu</p>
-                <p>İstanbul Anten tamircisi</p>
-                <p>Lnb arızası</p>
-                <p>Uydu arızası</p>
-                <p>İstanbul çanak anten ayarı</p>
+            <div>
+                • Atatürk Mahallesi</div>
+            <div>
+                • Barbaros Mahallesi</div>
+            <div>
+                • Esatpaşa Mahallesi
             </div>
-            <div class="col-sm-2"></div>
+            <div>
+                • Ferhatpaşa Mahallesi</div>
+            <div>
+                • Fetih Mahallesi
+            </div>
+            <div>
+                • İçerenköy Mahallesi
+            </div>
+            <div>
+                • İnönü Mahallesi
+            </div>
+            <div>
+                • Kayışdağı Mahallesi
+            </div>
+            <div>
+                • Küçükbakkalköy Mahallesi
+            </div>
+            <div>
+                • Mevlana Mahallesi
+            </div>
+            <div>
+                • Mimar Sinan Mahallesi
+            </div>
+            <div>
+                • Mustafa Kemal Mahallesi</div>
+            <div>
+                • Örnek Mahallesi
+            </div>
+            <div>
+                • Yeni Çamlıca Mahallesi
+            </div>
+            <div>
+                • Yeni Sahra Mahallesi
+            </div>
+            <div>
+                • Yenişehir Mahallesi</div>
+            <div>
+                <div>
+                    &nbsp;</div>
+                <div>
+                    <strong>Ümraniye</strong>
+                </div>
+                <div>
+                    &nbsp;</div>
+                <div>
+                    • Adem Yavuz Mahallesi
+                </div>
+                <div>
+                    • Altınşehir Mahallesi
+                </div>
+                <div>
+                    • Armağanevler Mahallesi
+                </div>
+                <div>
+                    • Aşağıdudullu Mahallesi
+                </div>
+                <div>
+                    • Atakent Mahallesi
+                </div>
+                <div>
+                    • Atatürk Mahallesi</div>
+                <div>
+                    • Cemil Meriç Mahallesi
+                </div>
+                <div>
+                    • Çakmak Mahallesi
+                </div>
+                <div>
+                    • Çamlık Mahallesi
+                </div>
+                <div>
+                    • Dudullu OSB Mahallesi
+                </div>
+                <div>
+                    • Dumlupınar Mahallesi
+                </div>
+                <div>
+                    • Elmalıkent Mahallesi
+                </div>
+                <div>
+                    • Esenevler Mahallesi
+                </div>
+                <div>
+                    • Esenkent Mahallesi
+                </div>
+                <div>
+                    • Esenşehir Mahallesi
+                </div>
+                <div>
+                    • Fatih Sultan Mehmet Mahallesi</div>
+                <div>
+                    • Finanskent Mahallesi</div>
+                <div>
+                    • Hekimbaşı Mahallesi</div>
+                <div>
+                    • Huzur Mahallesi
+                </div>
+                <div>
+                    • Ihlamurkuyu Mahallesi
+                </div>
+                <div>
+                    • İnkılap Mahallesi
+                </div>
+                <div>
+                    • İstiklal Mahallesi
+                </div>
+                <div>
+                    • Kâzım Karabekir Mahallesi
+                </div>
+                <div>
+                    • Madenler Mahallesi
+                </div>
+                <div>
+                    • Mehmet Akif Mahallesi
+                </div>
+                <div>
+                    • Namık Kemal Mahallesi
+                </div>
+                <div>
+                    • Necip Fazıl Mahallesi
+                </div>
+                <div>
+                    • Parseller Mahallesi
+                </div>
+                <div>
+                    • Saray Mahallesi
+                </div>
+                <div>
+                    • Site Mahallesi
+                </div>
+                <div>
+                    • Şerifali Mahallesi
+                </div>
+                <div>
+                    • Tantavi Mahallesi
+                </div>
+                <div>
+                    • Tatlısu Mahallesi
+                </div>
+                <div>
+                    • Tepeüstü Mahallesi
+                </div>
+                <div>
+                    • Topağacı Mahallesi
+                </div>
+                <div>
+                    • Yamanevler Mahallesi
+                </div>
+                <div>
+                    • Yenişehir Mahallesi
+                </div>
+                <div>
+                    • Yukarıdudullu Mahallesi</div>
+                <div>
+                    &nbsp;&nbsp;</div>
+                <div>
+                    <strong>Kadıköy Bölgesi</strong>
+                </div>
+                <div>
+                    &nbsp;</div>
+                <div>
+                    • Acıbadem Mahallesi
+                </div>
+                <div>
+                    • Bostancı Mahallesi
+                </div>
+                <div>
+                    • Caddebostan Mahallesi
+                </div>
+                <div>
+                    • Caferağa Mahallesi
+                </div>
+                <div>
+                    • Dumlupınar Mahallesi
+                </div>
+                <div>
+                    • Eğitim Mahallesi
+                </div>
+                <div>
+                    • Erenköy Mahallesi
+                </div>
+                <div>
+                    • Fenerbahçe Mahallesi
+                </div>
+                <div>
+                    • Feneryolu Mahallesi
+                </div>
+                <div>
+                    • Fikirtepe Mahallesi
+                </div>
+                <div>
+                    • Göztepe Mahallesi
+                </div>
+                <div>
+                    • Hasanpaşa Mahallesi
+                </div>
+                <div>
+                    • Koşuyolu Mahallesi
+                </div>
+                <div>
+                    • Kozyatağı Mahallesi
+                </div>
+                <div>
+                    • Merdivenköy Mahallesi
+                </div>
+                <div>
+                    • 19 Mayıs Mahallesi
+                </div>
+                <div>
+                    • Osmanağa Mahallesi
+                </div>
+                <div>
+                    • Rasimpaşa Mahallesi
+                </div>
+                <div>
+                    • Sahrayıcedid Mahallesi
+                </div>
+                <div>
+                    • Suadiye Mahallesi
+                </div>
+                <div>
+                    • Zühtüpaşa Mahallesi</div>
+
+                <div>
+                    &nbsp;</div>
+                <div>
+                    <strong>Üsküdar Bölgesi</strong>
+                </div>
+                <div>
+                    &nbsp;</div>
+                <div>
+                    • Acıbadem Mahallesi
+                </div>
+                <div>
+                    • Ahmediye Mahallesi
+                </div>
+                <div>
+                    • Altunizade Mahallesi</div>
+                <div>
+                    • Aziz MahmutHüdayi Mahallesi</div>
+                <div>
+                    • Bahçelievler Mahallesi
+                </div>
+                <div>
+                    • Barbaros Mahallesi
+                </div>
+                <div>
+                    • Beylerbeyi Mahallesi
+                </div>
+                <div>
+                    • Bulgurlu Mahallesi
+                </div>
+                <div>
+                    • Burhaniye Mahallesi
+                </div>
+                <div>
+                    • Cumhuriyet Mahallesi
+                </div>
+                <div>
+                    • Çengelköy Mahallesi
+                </div>
+                <div>
+                    • Ferah Mahallesi
+                </div>
+                <div>
+                    • Güzeltepe Mahallesi
+                </div>
+                <div>
+                    • İcadiye Mahallesi
+                </div>
+                <div>
+                    • Kandilli Mahallesi
+                </div>
+                <div>
+                    • Kirazlıtepe Mahallesi
+                </div>
+                <div>
+                    • Kısıklı Mahallesi
+                </div>
+                <div>
+                    • Kuleli Mahallesi
+                </div>
+                <div>
+                    • Kuzguncuk Mahallesi
+                </div>
+                <div>
+                    • Küçükçamlıca Mahallesi</div>
+                <div>• Küçüksu Mahallesi</div>
+                <div> • Küplüce Mahallesi</div>
+                <div> • Mehmet Akif Ersoy Mahallesi</div>
+                <div> • Mimarsinan Mahallesi</div>
+                <div> • Muratreis Mahallesi</div>
+                <div> • Salacak Mahallesi</div>
+                <div> • Selamiali Mahallesi</div>
+                <div id="harita"> • Selimiye Mahallesi</div>
+                <div> • Sultantepe Mahallesi</div>
+                <div> • Ünalan Mahallesi</div>
+                <div> • Valide-i Atik Mahallesi</div>
+                <div> • Yavuztürk Mahallesi</div>
+                <div > • Zeynep Kamil Mahallesi</div>
+
+
+
+            </div>
+
         </div>
+
+
+
     </div>
 
 
 
-    <img class="foto" src="../asset/53763.jpg" alt="">
-    <img class="foto2" src="../asset/images.png" alt="">
-    <img class="foto1" src="../asset/fc_Digiturk_LOGO001.jpg" alt="">
-    <img class="foto4" src="../asset/indir (1).png" alt="">
-
-
-
-
-    <P class="hakkımızda ">
-
-
-
-
-        Emre Uydu Sistemleri olarak;
-
-        Uydu ayarı, Digiturk, Turksat, Tivibu, Dsmart kurulumu ve arızası, Tivibu kanal ayarları, anten kurulumu, hat
-        çekme, kablo çekme, uydu kanal listesi güncelleme, Türksat uydu frekansları, astra ve hotbird uydusu bulma, tv
-        ve kanal listesi düzenleme, kanal arama, çanak yönü bulma, çanak bulma, dayzek ve disqc ayarı yapma
-        hizmetlerimizi uzman ekiplerimiz ile hızlı ve güvenilir şekilde yapıyoruz.
-
-    </P>
-
-
-    <img class="montaj" src="../asset/uydu-canak-montaji-6.jpg" alt="">
-
-
-    <p class="hakkımızda">
-        Uzman ekiplerimzce en kısa sürede anten sabitleme, anten ayar, anten servisi hizmeti. Aynı zamanda dijital
-        televizyon ayarları, tv uydu
-        recevir update etme hizmetlerimiz de bulunmaktadır.
-
-    </p>
-
-    <img class="montaj" src="../asset/merkeziuydu.jpg" alt="">
-
-    <p  id="harita" class="hakkımızda">
-        Apartman gibi toplu yaşam alanlarında yüksek çözünürlüklü uydu tv yayınlarını her abonenin çanak anten kurmasına
-        gerek kalmadan tüm apartman sakinlerinin yararlanabilmesi için tek Merkezi Sistem kurulumunu. Onarım ve bakımı.
-    </p>
-
-
-    <div class="call">
+    <div  class="call">
         <a class="telefon-ara-btn" href="tel:+905051162929"><i class="fa fa-phone" aria-hidden="true"></i> +90 (505) 116
             2929</a>
         <br>
@@ -226,6 +452,11 @@
             style="border:0; width: 60vw; height: 30vw;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
+
+
+
+
 
 
 
