html dosyaları degistirildi

--- a/html/hizmetlerimiz.html
+++ b/html/hizmetlerimiz.html
@@ -176,30 +176,33 @@
 
 
 
-
-    <!-- Footer -->
+   
     <footer class="text-center text-lg-start bg-light text-muted">
 
-
-
-        <!-- Section: Links  -->
         <section class="">
             <div class="container text-center text-md-start mt-5">
-                <!-- Grid row -->
+
                 <div class="row mt-3">
-                    <!-- Grid column -->
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <div class="col-md-5 col-lg-4 col-xl-6 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3"></i>ADRES
+                            <i class="fa fa-info-circle" aria-hidden="true"></i>
+                            </i>HAKKIMIZDA
                         </h6>
                         <p class="company">
-                            Fetih, Eski Çiftlik Yolu Cd No:5 D:c, 34705 Ataşehir/İstanbul
+                            Emre Uydu Sistemleri olarak;
+                            Uydu ayarı,Digiturk, Turksat,
+                            Tivibu, Dsmart kurulumu ve arızası,
+                            Tivibu kanal ayarları, anten kurulumu,
+                            hat çekme, kablo çekme,
+                            uydu kanal listesi güncelleme,
+                            Türksat uydu frekansları, astra ve hotbird uydusu bulma,
+                            tv ve kanal listesi düzenleme, kanal arama, çanak yönü bulma,
+                            çanak bulma, dayzek ve disqc ayarı yapma hizmetlerimizi hızlı ve güvenilir şekilde
+                            yapıyoruz.
                         </p>
                     </div>
-                    <!-- Grid column -->
 
-                    <!-- Grid column -->
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
@@ -218,34 +221,11 @@
                             <a href="iletisim.html" class="text-reset">İletişim</a>
                         </p>
                     </div>
-                    <!-- Grid column -->
 
-                    <!-- Grid column -->
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Useful links
-                        </h6>
-                        <p>
-                            <a href="#!" class="text-reset">Pricing</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Settings</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Orders</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Help</a>
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <div class="col-md-5 col-lg-3 col-xl-4 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">Adres</h6>
-                        <p><i class="fas fa-home me-3"></i> Fetih, Eski Çiftlik Yolu Cd No:5 D:c, 34705
+                        <p><i class='fas fa-map-marker-alt'></i> Fetih, Eski Çiftlik Yolu Cd No:5 D:c, 34705
                             Ataşehir/İstanbul</p>
                         <p>
                             <i class="fas fa-envelope me-3"></i>
@@ -254,51 +234,40 @@
                         <p><i class="fas fa-phone me-3"></i> +90 505 116 2929</p>
 
                     </div>
-                    <!-- Grid column -->
                 </div>
-                <!-- Grid row -->
+
             </div>
         </section>
-        <!-- Section: Links  -->
+
 
         <div class="container p-4 pb-0">
-            <!-- Section: Social media -->
             <section class="mb-4">
-                <!-- Facebook -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #3b5998;" href="#!" role="button"><i
-                        class="fab fa-facebook-f"></i></a>
-
-                <!-- Twitter -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #55acee;" href="#!" role="button"><i
-                        class="fab fa-twitter"></i></a>
-
-                <!-- Google -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39;" href="#!" role="button"><i
-                        class="fab fa-google"></i></a>
-
+                <!-- Whatsapp -->
+                <a class="btn text-white btn-floating m-1 " style="background-color: #25d366;" href="https://wa.me/905051162929";
+                    role="button"><i class="fab fa-whatsapp"></i></a>
                 <!-- Instagram -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;" href="#!" role="button"><i
+                <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;"
+                    href="https://www.instagram.com/emreiletisimatasehir/?hl=tr" role="button"><i
                         class="fab fa-instagram"></i></a>
 
-                <!-- Linkedin -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #0082ca;" href="#!" role="button"><i
-                        class="fab fa-linkedin-in"></i></a>
-                <!-- Github -->
-                <a class="btn text-white btn-floating m-1" style="background-color: #333333;" href="#!" role="button"><i
-                        class="fab fa-github"></i></a>
+
+                <!-- Call -->
+                <a class="btn text-white btn-floating m-1 telefon-ara-btn kalk" style="background-color: royalblue;"
+                    href="tel:+905051162929" role="button"><i class="fa fa-phone"></i></a>
+
+
             </section>
-            <!-- Section: Social media -->
-              
+
         </div>
 
-        <!-- Copyright -->
+        <!-- Copyright 
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2021 Copyright:
             <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
         </div>
-        <!-- Copyright -->
+        Copyright -->
+
     </footer>
-    <!-- Footer -->
 
 
 
