--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <meta property="og:image:type" content="image/jpeg">
 
     <title>EMRE UYDU SİSTEMLERİ</title>
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/iletisim.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/iletisim.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -60,12 +60,12 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <!-- NAVIGATION MENUS -->
           <div class="menu">
-            <li><a href="../html/index.html">Ana Sayfa</a></li>
-            <li><a href="../html/hizmetlerimiz.html">Hizmetlerimiz</a></li>
+            <li><a href="./index.html">Ana Sayfa</a></li>
+            <li><a href="./html/hizmetlerimiz.html">Hizmetlerimiz</a></li>
             <li class="services">
-              <a href="../html/hizmet_bolgesi.html">Hizmet Bölgesi</a>
+              <a href="./html/hizmet_bolgesi.html">Hizmet Bölgesi</a>
             </li>
-            <li><a href="../html/iletisim.html">İletişim</a></li>
+            <li><a href="./html/iletisim.html">İletişim</a></li>
             <li>
                <a class="telefon-ara-btn menu-phone-call" href="tel:+905051162929"><i class="fa fa-phone calll"
                    aria-hidden="true"></i> Bizi Ara</a>
@@ -76,7 +76,7 @@
 
     <div id="slider">
 
-        <a class="mySlides" href="#"><img src="../asset/7-244-01-1.png" /></a>
+        <a class="mySlides" href="#"><img src="./asset/7-244-01-1.png" /></a>
         <a class="mySlides" href="#"><img
                 src="../asset/European-Satellite-Dish-Installation-in-Reading-Berkshire-1184x789-800x533.jpg" /></a>
         <a class="mySlides" href="#"><img src="../asset/Merkezi-Uydu-TV-Sistemleri.png" /></a>
