--- a/html/hizmet_bolgesi.html
+++ b/html/hizmet_bolgesi.html
@@ -60,7 +60,7 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <!-- NAVIGATION MENUS -->
           <div class="menu">
-            <li><a href="../html/index.html">Ana Sayfa</a></li>
+            <li><a href="../index.html">Ana Sayfa</a></li>
             <li><a href="../html/hizmetlerimiz.html">Hizmetlerimiz</a></li>
             <li class="services">
               <a href="../html/hizmet_bolgesi.html">Hizmet Bölgesi</a>
