--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/iletisim.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -52,36 +53,36 @@
 
     <nav class="navbar">
         <!-- LOGO -->
-        <div class="logo">EMRE UYDU SİSTEMLERİ</div>
+        <div class="logo"><a href="./index.html " style="color:white; ">EMRE UYDU SİSTEMLERİ</a></div>
         <!-- NAVIGATION MENU -->
         <ul class="nav-links">
-          <!-- USING CHECKBOX HACK -->
-          <input type="checkbox" id="checkbox_toggle" />
-          <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-          <!-- NAVIGATION MENUS -->
-          <div class="menu">
-            <li><a href="./index.html">Ana Sayfa</a></li>
-            <li><a href="./html/hizmetlerimiz.html">Hizmetlerimiz</a></li>
-            <li class="services">
-              <a href="./html/hizmet_bolgesi.html">Hizmet Bölgesi</a>
-            </li>
-            <li><a href="./html/iletisim.html">İletişim</a></li>
-            <li>
-               <a class="telefon-ara-btn menu-phone-call" href="tel:+905051162929"><i class="fa fa-phone calll"
-                   aria-hidden="true"></i> Bizi Ara</a>
-            </li>
-          </div>
+            <!-- USING CHECKBOX HACK -->
+            <input type="checkbox" id="checkbox_toggle" />
+            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+            <!-- NAVIGATION MENUS -->
+            <div class="menu">
+                <li><a href="./index.html">Ana Sayfa</a></li>
+                <li><a href="./html/hizmetlerimiz.html">Hizmetlerimiz</a></li>
+                <li class="services">
+                    <a href="./html/hizmet_bolgesi.html">Hizmet Bölgesi</a>
+                </li>
+                <li><a href="./html/iletisim.html">İletişim</a></li>
+                <li>
+                    <a class="telefon-ara-btn menu-phone-call" href="tel:+905051162929"><i class="fa fa-phone calll"
+                            aria-hidden="true"></i> Bizi Ara</a>
+                </li>
+            </div>
         </ul>
-      </nav>
+    </nav>
 
     <div id="slider">
 
         <a class="mySlides" href="#"><img src="./asset/7-244-01-1.png" /></a>
         <a class="mySlides" href="#"><img
-                src="../asset/European-Satellite-Dish-Installation-in-Reading-Berkshire-1184x789-800x533.jpg" /></a>
-        <a class="mySlides" href="#"><img src="../asset/Merkezi-Uydu-TV-Sistemleri.png" /></a>
-        <a class="mySlides" href="#"><img src="../asset/melihk.png" /></a>
-        <a class="mySlides" href="#"><img src="../asset/aaa.png" alt=""></a>
+                src="./asset/European-Satellite-Dish-Installation-in-Reading-Berkshire-1184x789-800x533.jpg" /></a>
+        <a class="mySlides" href="#"><img src="./asset/Merkezi-Uydu-TV-Sistemleri.png" /></a>
+        <a class="mySlides" href="#"><img src="./asset/melihk.png" /></a>
+        <a class="mySlides" href="#"><img src="./asset/aaa.png" alt=""></a>
     </div>
 
 
@@ -235,32 +236,40 @@
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Ana Sayfa
+                            <br>
                         </h6>
                         <p>
-                            <a href="index.html" class="text-reset">Ana Sayfa</a>
+                            <a href="index.html" class="text-reset">
+                                <p class="text-p">Ana Sayfa</p>
+                            </a>
                         </p>
                         <p>
-                            <a href="hizmet_bolgesi.html" class="text-reset">Hizmet Bölgemiz</a>
+                            <a href="./html/hizmet_bolgesi.html" class="text-reset">
+                                <p class="text-p">Hizmet Bölgemiz</p>
+                            </a>
                         </p>
                         <p>
-                            <a href="hizmetlerimiz.html" class="text-reset">Hizmetlerimiz</a>
+                            <a href="./html/hizmetlerimiz.html" class="text-reset">
+                                <p class="text-p">Hizmetlerimiz</p>
+                            </a>
                         </p>
                         <p>
-                            <a href="iletisim.html" class="text-reset">İletişim</a>
+                            <a href="./html/iletisim.html" class="text-reset">
+                                <p class="text-p">İletişim</p>
+                            </a>
                         </p>
                     </div>
 
                     <div class="col-md-5 col-lg-3 col-xl-4 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">Adres</h6>
-                        <p><i class='fas fa-map-marker-alt'></i> Fetih, Eski Çiftlik Yolu Cd No:5 D:c, 34705
+                        <p class="text-p"><i class='fas fa-map-marker-alt'></i> Fetih, Eski Çiftlik Yolu Cd No:5 D:c, 34705
                             Ataşehir/İstanbul</p>
-                        <p>
+                        <p class="text-p">
                             <i class="fas fa-envelope me-3"></i>
                             info@example.com
                         </p>
-                        <p><i class="fas fa-phone me-3"></i> +90 505 116 2929</p>
+                        <p class="text-p"><i class="fas fa-phone me-3"></i> +90 505 116 2929</p>
 
                     </div>
                 </div>
@@ -272,8 +281,8 @@
         <div class="container p-4 pb-0">
             <section class="mb-4">
                 <!-- Whatsapp -->
-                <a class="btn text-white btn-floating m-1 " style="background-color: #25d366;" href="https://wa.me/905051162929";
-                    role="button"><i class="fab fa-whatsapp"></i></a>
+                <a class="btn text-white btn-floating m-1 " style="background-color: #25d366;"
+                    href="https://wa.me/905051162929" ; role="button"><i class="fab fa-whatsapp"></i></a>
                 <!-- Instagram -->
                 <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;"
                     href="https://www.instagram.com/emreiletisimatasehir/?hl=tr" role="button"><i
