--- a/html/iletisim.html
+++ b/html/iletisim.html
@@ -160,7 +160,7 @@
                             Ataşehir/İstanbul</p>
                         <p class="text-p">
                             <i class="fas fa-envelope me-3"></i>
-                            info@example.com
+                            infoemreuydu@gmail.com
                         </p>
                         <p class="text-p"><i class="fas fa-phone me-3"></i> +90 505 116 2929</p>
 
