--- a/html/iletisim.html
+++ b/html/iletisim.html
@@ -21,8 +21,8 @@
     <meta property="og:title" content="Uydu Servisleri İstanbul">
     <meta property="og:description"
         content="İstanbul Uydu Servisi olan uyduantentvservisi.org 7/24 saat Uydu Çanak anten Televizyon servisi ve uydu hizmeti sağlamaktadır.">
-    <meta property="og:url" content="http://www.emreuydu.com/">
-    <meta property="og:site_name" content="emreuydu.com/">
+    <meta property="og:url" content="http://www.emreuydu.com.tr/">
+    <meta property="og:site_name" content="emreuydu.com.tr/">
     <meta property="article:publisher" content="">
     <meta property="og:image:alt" content="Usta Uydu Servisi">
     <meta property="og:image:type" content="image/jpeg">
@@ -69,7 +69,7 @@
             </li>
             <li><a href="../html/iletisim.html">İletişim</a></li>
             <li>
-               <a class="telefon-ara-btn menu-phone-call" href="tel:+905051162929"><i class="fa fa-phone calll"
+               <a class="telefon-ara-btn menu-phone-call" href="tel:+905326354229"><i class="fa fa-phone calll"
                    aria-hidden="true"></i> Bizi Ara</a>
             </li>
           </div>
@@ -79,11 +79,11 @@
 
 
     <div class="call iletisim2">
-        <a class="telefon-ara-btn" href="tel:+905051162929"><i class="fa fa-phone" aria-hidden="true"></i> +90 (505) 116
-            2929</a>
+        <a class="telefon-ara-btn" href="tel:+905326354229"><i class="fa fa-phone" aria-hidden="true"></i> +90 (532) 635
+            4229</a>
         <br>
         <br>
-        <a class="telefon-ara-btn" href="tel:+905051162929"><i class="fa fa-phone" aria-hidden="true"></i> Bizi Ara</a>
+        <a class="telefon-ara-btn" href="tel:+905326354229"><i class="fa fa-phone" aria-hidden="true"></i> Bizi Ara</a>
     </div>
 
 
@@ -162,7 +162,7 @@
                             <i class="fas fa-envelope me-3"></i>
                             infoemreuydu@gmail.com
                         </p>
-                        <p class="text-p"><i class="fas fa-phone me-3"></i> +90 505 116 2929</p>
+                        <p class="text-p"><i class="fas fa-phone me-3"></i> +90 532 635 4229</p>
 
                     </div>
                 </div>
@@ -174,7 +174,7 @@
         <div class="container p-4 pb-0">
             <section class="mb-4">
                 <!-- Whatsapp -->
-                <a class="btn text-white btn-floating m-1 " style="background-color: #25d366;" href="https://wa.me/905051162929";
+                <a class="btn text-white btn-floating m-1 " style="background-color: #25d366;" href="https://wa.me/905326354229";
                     role="button"><i class="fab fa-whatsapp"></i></a>
                 <!-- Instagram -->
                 <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;"
@@ -184,7 +184,7 @@
 
                 <!-- Call -->
                 <a class="btn text-white btn-floating m-1 telefon-ara-btn" style="background-color: royalblue;"
-                    href="tel:+905051162929" role="button"><i class="fa fa-phone"></i></a>
+                    href="tel:+905326354229" role="button"><i class="fa fa-phone"></i></a>
 
 
             </section>
